--- a/templates/base.html
+++ b/templates/base.html
@@ -1,18 +1,18 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Golden Arrow {% block title %}{% endblock %}</title>
+    <title>Golden Arrow - {{ title }}</title>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
-
 <body>
-    {% block content %}
-    {% endblock %}
+    {% include 'navbar.html' %}
+    <div class="container">
+        {% block content %}
+        {% endblock %}
+    </div>
 </body>
-
 </html>
