--- a/templates/home.html
+++ b/templates/home.html
@@ -1,13 +1,8 @@
 {% extends 'base.html' %}
-{% load static %}
-
-{% block title %} {{ title }} {% endblock %}
 
 {% block content %}
-<h1>{{ title }}</h1>
-<div>
-    <img src="{% static 'images/ok_hand_2.png' %}" alt="" style="width: 200px; display: block;">
-    <img src="{% static 'images/thumbs_up.jpeg' %}" alt="" style="width: 200px; display: block;">
-    <img src="{% static 'images/strawberry.png' %}" alt="" style="width: 200px; display: block;">
+<div class="h-85 center-content text-center">
+    <p class="display-6 mb-4">Welcome to Golden Arrow Official Recruiter</p>
+    <a class="btn btn-outline-primary" href="{% url 'jobs' %}">See available jobs</a>
 </div>
 {% endblock %}
