--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="h-85 center-content text-center">
-    <p class="display-6 mb-4">Welcome to Golden Arrow Official Recruiter</p>
+    <p class="display-3">Welcome to Golden Arrow Official Recruiter</p>
     <a class="btn btn-outline-primary" href="{% url 'jobs' %}">See available jobs</a>
 </div>
 {% endblock %}
