--- a/templates/login.html
+++ b/templates/login.html
@@ -1,23 +1,25 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="w-50 justify-center">
-    <h1>Log In</h1>
-    <form method="post">
-        {% csrf_token %}
-        <div class="mt-4">
-            <label class="form-label" for="username">Username</label>
-            <input class="form-control" type="text" name="username" id="username">
-        </div>
-        
-        <div class="mt-4">
-            <label class="form-label" for="password">Password</label>
-            <input class="form-control" type="password" name="password" id="password">
-        </div>
-        
-        <div class="mt-4">
-            <button class="btn btn-primary" type="submit">Login</button>
-        </div>
-    </form>
+<div class="row">
+    <div class="col-md-6 col-lg-4">
+        <h1>Sign In</h1>
+        <form method="POST">
+            {% csrf_token %}
+            <div class="mt-4">
+                <label class="form-label" for="username">Username</label>
+                <input class="form-control" type="text" name="username" id="username">
+            </div>
+
+            <div class="mt-4">
+                <label class="form-label" for="password">Password</label>
+                <input class="form-control" type="password" name="password" id="password">
+            </div>
+
+            <div class="mt-4">
+                <button class="btn btn-primary" type="submit">Sign In</button>
+            </div>
+        </form>
+    </div>
 </div>
 {% endblock %}
