--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,5 +1,5 @@
 {% load static %}
-<nav class="navbar">
+<!-- <nav class="navbar">
     <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'assets/golden_arrow_logo.jpg' %}"
                 alt="golden_arrow_logo" style="width: 55px;"></a>
@@ -14,6 +14,43 @@
                 <a href="{% url 'logout' %}">Logout</a>
             </div>
             {% endif %}
+        </div>
+    </div>
+</nav> -->
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container">
+        <a class="navbar-brand" href="{% url 'home' %}">Golden Arrow</a>
+        <!-- <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'assets/golden_arrow_logo.jpg' %}"
+                alt="golden_arrow_logo" style="width: 25px;"></a> -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
+            aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarColor01">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'jobs' %}">Jobs</a>
+                </li>
+                {% if request.user.is_authenticated %}
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
+                        aria-haspopup="true" aria-expanded="false">{{ request.user }}</a>
+                    <div class="dropdown-menu">
+                        <!-- <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <a class="dropdown-item" href="#">Something else here</a> -->
+                        <!-- <div class="dropdown-divider"></div> -->
+                        <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+                    </div>
+                </li>
+                {% endif %}
+            </ul>
+            <!-- <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+            </form> -->
         </div>
     </div>
 </nav>
