--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -20,7 +20,8 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
-        <a class="navbar-brand" href="{% url 'home' %}">Golden Arrow</a>
+        <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'assets/golden_arrow_logo.jpg' %}"
+                alt="golden_arrow_logo" style="width: 25px; margin-right: .5rem;">Golden Arrow</a>
         <!-- <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'assets/golden_arrow_logo.jpg' %}"
                 alt="golden_arrow_logo" style="width: 25px;"></a> -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
