--- a/templates/jobs.html
+++ b/templates/jobs.html
@@ -36,19 +36,29 @@
 {% for job in page_obj %}
 <div class="card mt-3">
     <div class="card-body">
+        {% if job.starting_date %}
+        <p>
+            Applying starts on <b>{{ job.starting_date | date:"d M Y" }}</b>
+            {% endif %}
+
+            {% if job.closing_date %}
+            Closes on <b>{{ job.closing_date | date:"d M Y" }}</b>
+        </p>
+        {% endif %}
+
         <div>
-            <b style="text-transform: uppercase;">JOB</b>
+            <b class="text-primary" style="text-transform: uppercase;">JOB</b>
             <h5 class="card-title">{{ job.title }}</h5>
         </div>
 
         <div>
-            <b style="text-transform: uppercase;">LOCATION</b>
+            <b class="text-primary" style="text-transform: uppercase;">LOCATION</b>
             <h5 class="card-text">{{ job.location }}</h5>
         </div>
 
         {% if job.description %}
         <div class="card-text mt-3">
-            <b class="card-text" style="text-transform: uppercase;">Responsibilities</b>
+            <b class="text-primary" class="card-text" style="text-transform: uppercase;">Responsibilities</b>
             <ul class="list-group">
                 {% for item in job.descriptions %}
                 <li class="list-group-item border-0">{{ item }}</li>
@@ -59,7 +69,7 @@
 
         {% if job.requirement %}
         <div class="card-text mt-3">
-            <b class="card-text" style="text-transform: uppercase;">Qualifications</b>
+            <b class="text-primary" class="card-text" style="text-transform: uppercase;">Qualifications</b>
             <ul class="list-group">
                 {% for item in job.requirements %}
                 <li class="list-group-item border-0">{{ item }}</li>
@@ -67,6 +77,7 @@
             </ul>
         </div>
         {% endif %}
+        <p class="mt-3">Posted at {{ job.created_at }}</p>
     </div>
 </div>
 {% endfor %}
