--- a/templates/add_job.html
+++ b/templates/add_job.html
@@ -40,7 +40,7 @@
                 <textarea class="form-control" name="requirement" id="requirement" cols="30" rows="10"></textarea>
             </div>
 
-            <div class="form-group mt-4 justify-between">
+            <div class="d-flex justify-content-between mt-4">
                 <a class="btn btn-secondary" href="{% url 'jobs' %}">Back</a>
                 <button class="btn btn-primary" type="submit">Add Job</button>
             </div>
