fix spelling in jobs page

--- a/templates/jobs.html
+++ b/templates/jobs.html
@@ -19,7 +19,7 @@
         <h1>Jobs</h1>
     </div>
     <div class="col-6 text-right">
-        <p>To apply, email us at <a href="mailto:carrer@goldenarrow.sd">career@goldenarrow.sd</a></p>
+        <p>To apply, email us at <a href="mailto:carrer@goldenarrow.sd">careers@goldenarrow.sd</a></p>
         <p class="text-muted">Please specify the position you're apply to in
             your email.</p>
     </div>
